tests/lean/multiConstantError.lean.expected.out
multiConstantError.lean:1:9-1:10: error: Failed to infer type for binder `b`.

context:
⊢ Sort ?u
multiConstantError.lean:1:11-1:12: error: Failed to infer type for binder `c`.

context:
b : ?_
⊢ Sort ?u
multiConstantError.lean:1:0-1:18: warning: Declaration `a` has parameters with undetermined types.

Recall that the `opaque` command defines a single constant. The identifier(s) `b` and `c` are being interpreted as parameter(s) `(b : _)` and `(c : _)`.
multiConstantError.lean:3:9-3:10: error: Failed to infer type for binder `α`.

context:
⊢ Sort ?u
multiConstantError.lean:3:0-3:23: warning: Declaration `a` has parameters with undetermined types.

Recall that the `opaque` command defines a single constant. The identifier(s) `α` and `β` are being interpreted as parameter(s) `(α : _)` and `(β : _)`.
